# Native

./: .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  README.md  Taskfile.yml  flake.nix  package.json  shell.nix
apps/native/: Cargo.toml
apps/native/src/: main.rs
apps/web/: Cargo.toml
apps/web/src/: main.rs
assets/: input.css  main.css
crates/core/: CLAUDE.md  Cargo.toml  README.md
crates/core/src/: events.rs  lib.rs  protocol.rs  traits.rs
crates/core/src/types/: connection.rs  conversation.rs  message.rs  mod.rs
crates/platform-native/: Cargo.toml
crates/platform-native/src/: events.rs  lib.rs  transport.rs
crates/platform-web/: Cargo.toml
crates/platform-web/src/: events.rs  lib.rs  transport.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
crates/ui/src/features/: mod.rs
crates/ui/src/features/chat/: hooks.rs  mod.rs  service.rs  state.rs
crates/ui/src/features/chat/components/: chat_header.rs  message_bubble.rs  message_input.rs  message_list.rs  mod.rs  screen.rs  typing_indicator.rs
crates/ui/src/features/conversations/: mod.rs  service.rs  state.rs
crates/ui/src/features/conversations/components/: item.rs  list.rs  mod.rs
crates/ui/src/features/media/: mod.rs  picker.rs  preview.rs  types.rs
crates/ui/src/features/settings/: mod.rs  service.rs  state.rs
crates/ui/src/features/settings/components/: mod.rs  modal.rs
crates/ui/src/shared/: connection_indicator.rs  mod.rs
crates/ui/src/shells/: desktop.rs  mobile.rs  mod.rs  responsive.rs
src/: components.rs  lib.rs  main.rs  media.rs  state.rs  websocket.rs
tests/: behavior_tests.rs
