[package]
name = "prsnl-assistant"
version = "0.1.0"
authors = ["Otto"]
edition = "2021"
description = "Personal Assistant Native App"

[dependencies]
dioxus = { version = "=0.7.1", features = ["mobile", "desktop"] }
dioxus-logger = "=0.7.1"
tracing = "0.1"

# WebSocket client (using rustls for Android compatibility)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
tokio = { version = "1", features = ["rt", "sync", "macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []

[[bin]]
name = "prsnl-assistant"
path = "src/main.rs"
