[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/platform-native",
    "crates/platform-web",
    "crates/ui",
    "apps/native",
    "apps/web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Otto"]

[workspace.dependencies]
# Core dependencies (shared across crates)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
base64 = "0.22"
tracing = "0.1"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Dioxus - base without platform features (platforms added per-crate)
dioxus = { version = "=0.7.2", default-features = false }
dioxus-logger = "=0.7.2"

# Native platform dependencies
tokio = { version = "1", features = ["rt", "sync", "macros"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tokio-stream = { version = "0.1", features = ["sync"] }
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }
tracing-subscriber = "0.3"

# Web platform dependencies
web-sys = { version = "0.3", features = ["File", "FileList", "FileReader", "Blob", "HtmlInputElement", "Event", "Document", "Window", "WebSocket", "MessageEvent", "CloseEvent", "ErrorEvent", "BinaryType"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-timers = "0.3"
js-sys = "0.3"
futures-channel = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }

# Internal crates
prsnl-core = { path = "crates/core" }
prsnl-platform-native = { path = "crates/platform-native" }
prsnl-platform-web = { path = "crates/platform-web" }
prsnl-ui = { path = "crates/ui" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
