[package]
name = "prsnl-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core types and traits for PrsnlAssistant"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
base64.workspace = true
async-trait.workspace = true
futures.workspace = true
