[package]
name = "prsnl-platform-native"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Native platform adapter for PrsnlAssistant (tokio + tungstenite)"

[dependencies]
prsnl-core.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-stream.workspace = true
futures.workspace = true
futures-util.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
serde_json.workspace = true
